--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   <nav>
     <button id="tab-snake" class="active">Snake</button>
     <button id="tab-pong">Pong</button>
+    <a href = "pong1.html">Pong</a>
     <button id="tab-ttt">Tic-Tac-Toe</button>
     <button id="tab-minesweeper">Minesweeper</button>
   </nav>
