Convert buttons to links for Snake and Pong

--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
 <body>
   <header>RETRO ARCADE</header>
   <nav>
-    <button id="tab-snake" class="active">Snake</button>
-    <button id="tab-pong">Pong</button>
-    <a href = "pong1.html">Pong</a>
+    <a href = "snake.html"><button id="tab-snake" class="active">Snake</button></a>
+    <a href = "pong1.html"><button id="tab-pong">Pong</button></a>
     <button id="tab-ttt">Tic-Tac-Toe</button>
     <button id="tab-minesweeper">Minesweeper</button>
   </nav>
