--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   <nav>
     <a href = "snake.html"><button id="tab-snake" class="active">Snake</button></a>
     <a href = "pong1.html"><button id="tab-pong">Pong</button></a>
+    <iframe width="392" height="620" src="https://studio.code.org/projects/applab/uWm0S1UtP8jve8TqyhIImDsDlN8r7bpZlg45juRT8Zk/embed"></iframe>
     <button id="tab-ttt">Tic-Tac-Toe</button>
     <button id="tab-minesweeper">Minesweeper</button>
   </nav>
